# Data-Driven-Customer-Retention

./: .flake8  .gitignore  Data_Driven_Customer_Retention_.ipynb  Makefile  README.md  config.py  data_cleaning.py  data_loading.py  data_validation.py  eda.py  feature_engineering.py  main.py  modeling.py  pyproject.toml
.github/workflows/: ci.yml
Dashboard/: README.md  app.py  churn_data_processed.csv  model_results.csv
tests/: conftest.py  test_config.py  test_data_cleaning.py  test_data_validation.py  test_feature_engineering.py  test_integration.py  test_modeling.py  test_preprocessing_pipeline.py
